More custom conflict tests and .NET fixes
Hopefully this API change to the ConflictResolver portion of ReplicationCollectionEntry made it in before anyone other than me implemented it.  Also added a document about the required conflict resolvers so far.  Added smoke tests for things other than log slurp logging.
